--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>诺贝保险管家</title>
+  <title>{{title}}</title>
   <script>
 
     function redirectWeChatUrl(){
@@ -86,7 +86,7 @@
    
   <script src="js/util.js?rev=91947199cd48c924148968873efd1c1f"></script>
   <script src="js/app.js?rev=630d262d51dfb2f017fa8e79b4df5ffa"></script>
-  <script src="js/main_controllers.js?rev=c1c8e059b8349df2c8570c0a1a101e44"></script>
+  <script src="js/main_controllers.js?rev=d5315377f549d5bfc3017d5f083eea70"></script>
   <script src="js/temai_controllers.js?rev=46de522c461f8e24a5805c4c579a1c10"></script>
   <script src="js/baodan_management_controller.js?rev=2a5cf313f7c66f710789ad34799b7542"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
