--- a/app/index.html
+++ b/app/index.html
@@ -32,13 +32,14 @@
       opacity: 1 !important;    /* */
     }
 </style>
- <link rel="stylesheet" href="css/output/application.min.css?rev=fe810e93016c2b170ac5a26fb2d9a211">
-<!--
+ <!-- <link rel="stylesheet" href="css/output/application.min.css?rev=ewre"> -->
+ <link rel="stylesheet" href="css/share.css">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/globe.css?rev=bef0de92ac18c2bcc88caec9e3c83093">
   <link rel="stylesheet" href="css/app.css?rev=5a256568e36e1b53714d98abec1e1ac0">
   <link rel="stylesheet" href="css/angular-busy.min.css?rev=382a25599fb5b0b2e9efc9af00041c17">
-  -->
+  
   </head>
 <body ontouchstart="" onselectstart="return false">
 
