modify the bugs

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no" />
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -32,14 +33,15 @@
       opacity: 1 !important;    /* */
     }
 </style>
- <!-- <link rel="stylesheet" href="css/output/application.min.css?rev=ewre"> -->
- <link rel="stylesheet" href="css/share.css">
 
+ <link rel="stylesheet" href="css/output/application.min.css?rev=e96c0efc6b3285cd1ac1d371f676739f"> 
+<!--
+  <link rel="stylesheet" href="css/share.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/globe.css?rev=bef0de92ac18c2bcc88caec9e3c83093">
+  <link rel="stylesheet" href="css/globe.css?rev=92b7756943dace1cc05da001c6d9fdae">
   <link rel="stylesheet" href="css/app.css?rev=5a256568e36e1b53714d98abec1e1ac0">
   <link rel="stylesheet" href="css/angular-busy.min.css?rev=382a25599fb5b0b2e9efc9af00041c17">
-  
+ --> 
   </head>
 <body ontouchstart="" onselectstart="return false">
 
@@ -91,7 +93,7 @@
   <script src="js/temai_controllers.js?rev=46de522c461f8e24a5805c4c579a1c10"></script>
   <script src="js/baodan_management_controller.js?rev=2a5cf313f7c66f710789ad34799b7542"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
-  <script src="js/jquery.piemenu.js?rev=a13af595c3eb3963cc6997ccf20eda3a"></script>
+  <script src="js/jquery.piemenu.js?rev=e070e6027aca8e65e4acfbb46f73f23d"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
 
   
