--- a/app/index.html
+++ b/app/index.html
@@ -34,11 +34,11 @@
     }
 </style>
 
- <link rel="stylesheet" href="css/output/application.min.css?rev=6ca716ec57e2b0f027f832ed33dc49dc"> 
+ <link rel="stylesheet" href="css/output/application.min.css?rev=2e8d8e22512f6802a79dade64c7bd0d4"> 
 <!--
   <link rel="stylesheet" href="css/share.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/globe.css?rev=e5f5ac5e2c195d6f6592fb9ebc08b059">
+  <link rel="stylesheet" href="css/globe.css?rev=113734b0c4a16e0525576503681b2af0">
   <link rel="stylesheet" href="css/app.css?rev=5a256568e36e1b53714d98abec1e1ac0">
   <link rel="stylesheet" href="css/angular-busy.min.css?rev=382a25599fb5b0b2e9efc9af00041c17">
  --> 
@@ -106,6 +106,17 @@
          $(this).parents(".cell_hd").removeClass("cell_hd_foucs");
    }) 
   $(function(){
+
+        if (window.devicePixelRatio && devicePixelRatio > 1) {
+            var testEle = document.createElement('div');
+            testEle.style.border = '.5px solid transparent';
+            document.body.appendChild(testEle);
+            if (testEle.offsetHeight == 1) {
+                document.querySelector('html').classList.add('hairlines');
+            }
+            document.body.removeChild(testEle);
+        }
+
         $("body").on("click",".mask",function(){
           $(".mask").hide();
         });
