中间页兼容和细节修改+投保须知全局的删除

--- a/app/activity/mobile.html
+++ b/app/activity/mobile.html
@@ -8,7 +8,7 @@
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <title></title>
   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="mobile.css?rev=fdgfdgf">
+  <link rel="stylesheet" href="mobile.css?rev=dfkjdk">
   <script>
   	var browser={
     versions:function(){ 
@@ -67,15 +67,15 @@
 	<div class="footer_font">
 		<p>
 			<span class="anquan">
-				<img src="img/anquan.jpg">
+				<img src="img/anquan.png">
 			</span>
 			保存图片用微信识别上方二维码
 		</p>
 		<p>
 			<span class="anquan">
-				<img src="img/anquan.jpg">
+				<img src="img/anquan.png">
 			</span>
-			或在微信直接搜索 <span class="font_red">
+			或在微信直接搜索 <span class="font_red font_weight_bold">
 									[ 诺贝保险 ]
 							 </span>
 		</p>
