--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>诺贝</title>
+  <title>诺贝保险管家</title>
   <script>
 
     function getParameterByName(name) {
