modify the bugs

--- a/app/activity/mobile.html
+++ b/app/activity/mobile.html
@@ -37,7 +37,14 @@
   }else{
   		window.location = "http://nuobei.cn";
   }
-  </script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?7735ab379e0c352fd0fcfeb3f9248b59";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+   </script>
 </head>
 <body>
 	<div class="header layout">
