--- a/app/activity/mobile.html
+++ b/app/activity/mobile.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
-  <title></title>
+  <title>诺贝保险管家</title>
   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="mobile.css?rev=dfkjdk">
   <script>
