--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -47,7 +47,7 @@
 <body  ontouchstart="">
   <main class="content" ng-view></main>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="wx_share/js/output/wx_application.min.js?rev=7768dfaa5dad93dd86319e2c9950657c"></script>
+  <script src="wx_share/js/output/wx_application.min.js?rev=f9db607feb1da2d9eda1987281e15e51"></script>
   <!--
   <script src="wx_share/js/util.js?rev=56c068a5e13fd8e6df99a8a57a50da5f"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -55,7 +55,7 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-<script src="wx_share/js/app.js?rev=5c1a453954b0c24e4d8071d6d5dad2bb"></script>
+<script src="wx_share/js/app.js?rev=d887a51067c90cc840ccfbbaf25961ac"></script>
 <script src="wx_share/js/controllers.js?rev=a3046ded34480162f372be65069695ca"></script>
 <script src="wx_share/js/directives.js?rev=1233a98e94d099705e9032f7a4b13f19"></script>
 <script src="wx_share/js/wxShare.js?rev=2da02030b8f8b92e267f98c9076ceb67"></script>
@@ -128,11 +128,21 @@
   </div>
 </div>
 <script type="text/javascript" >
+
    $(function(){
        $("#share").click(function(){
           _hmt.push(['_trackEvent', 'wx_share', 'wx_share_closemask']);
           $("#share").hide();
        })
+       if (window.devicePixelRatio && devicePixelRatio > 1) {
+          var testEle = document.createElement('div');
+          testEle.style.border = '.5px solid transparent';
+          document.body.appendChild(testEle);
+          if (testEle.offsetHeight == 1) {
+              document.querySelector('html').classList.add('hairlines');
+          }
+          document.body.removeChild(testEle);
+      }
    })
   </script>
 </body>
