--- a/app/index.html
+++ b/app/index.html
@@ -88,14 +88,14 @@
    -->
    
   <script src="js/util.js?rev=91947199cd48c924148968873efd1c1f"></script>
-  <script src="js/app.js?rev=3aef4230d6face1799041bc0bbfae8a5"></script>
-  <script src="js/main_controllers.js?rev=0294f0daa7dde48ae80030e2be60827d"></script>
-  <script src="js/temai_controllers.js?rev=29f563b8bb4faaa3d379aa65234683c0"></script>
-  <script src="js/baodan_management_controller.js?rev=53f3502cf150f46efeb17aef94b89e67"></script>
+  <script src="js/app.js?rev=7bf100cb4708b6339b3d87eaf0d4163e"></script>
+  <script src="js/main_controllers.js?rev=8ebe372450ce36bc0896629a25bce778"></script>
+  <script src="js/temai_controllers.js?rev=dcdc3ba9b740e65ee8a7b53196647008"></script>
+  <script src="js/baodan_management_controller.js?rev=5b4c1618b9d0c363e1200672254e380e"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=f09dce5124a244699c8d4e5d1c60efa4"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
-
+  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
   
   <script type="text/javascript" >
    $("body").on("focus","input",function(){
