--- a/app/anxiang.html
+++ b/app/anxiang.html
@@ -22,6 +22,16 @@
   <script src="anxiang/js/share.js"></script>
   <script>
     SHARE.init("http://web.youbaowuxian.com/anxiang.html");
+    var _hmt = _hmt || [];
+    _hmt.push(['_setAutoPageview', false]);
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?7735ab379e0c352fd0fcfeb3f9248b59";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+
+  _hmt.push(['_trackPageview', "anxiang"]);
   </script>
 </body>
 </html>
