--- a/app/anxiang_detail.html
+++ b/app/anxiang_detail.html
@@ -268,6 +268,16 @@ app.controller('myAnXiangDetailCtrl', ['$scope','$filter',
   <script src="anxiang/js/share.js"></script>
   <script>
     SHARE.init("http://web.youbaowuxian.com/anxiang_detail.html");
+     var _hmt = _hmt || [];
+    _hmt.push(['_setAutoPageview', false]);
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?7735ab379e0c352fd0fcfeb3f9248b59";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+
+  _hmt.push(['_trackPageview', "anxiang_detail"]);
   </script>
 </body>
 </html>
