--- a/app/anxiang_index.html
+++ b/app/anxiang_index.html
@@ -17,6 +17,16 @@
   <script src="anxiang/js/share.js"></script>
   <script>
     SHARE.init("http://web.youbaowuxian.com/anxiang_index.html");
+    var _hmt = _hmt || [];
+    _hmt.push(['_setAutoPageview', false]);
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?7735ab379e0c352fd0fcfeb3f9248b59";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+
+  _hmt.push(['_trackPageview', "anxiang_index"]);
   </script>
 </body>
 </html>
