--- a/app/wx_gl.html
+++ b/app/wx_gl.html
@@ -37,16 +37,16 @@
 
 
 					<div class="swiper-slide item " style="width:100%;height:180px;">
-						<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3A%2F%2Fweb.youbaowuxian.com%2Fwx_share.html&response_type=code&scope=snsapi_base&state=123#wechat_redirect">
-							<div class="img js_img" style="background-image: url('img/gl/51_header.png');"></div>
-							<p class="desc js_title">诺贝赠送平安500万航空意外险</p>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249623&idx=1&sn=bdbc416f7a8f2c7cafc9f9dea2c502b7#rd">
+							<div class="img js_img" style="background-image: url('img/gl/gl_01.jpg');"></div>
+							<p class="desc js_title">社保究竟是万能？还是鸡肋？</p>
 						</a>
 					</div>
 
 				<div class="swiper-slide item " style="width:100%;height:180px;">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#rd">
-							<div class="img js_img" style="background-image: url('img/gl/header_3.jpg');"></div>
-							<p class="desc js_title">关于我们，关于诺贝保险管家</p>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249594&idx=1&sn=471e26d76df65e0cc2d3f7d42dd49e85#rd">
+							<div class="img js_img" style="background-image: url('img/gl/gl_02.jpg');"></div>
+							<p class="desc js_title">保险就是要买不划算的</p>
 						</a>
 					</div>
 
@@ -61,7 +61,7 @@
 				<div class="tab_bd">
 
 					<div class="article_list article_list_0" >
-			            <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#rd">
+			            <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249623&idx=1&sn=bdbc416f7a8f2c7cafc9f9dea2c502b7#rd">
 							<div class="cover">
 								<img class="img js_img" src="img/gl/gl_01.jpg" alt=""/>
 							</div>
@@ -95,42 +95,6 @@
 							<div class="cont">
 								<h2 class="title js_title">朋友圈都在大病筹款，是因为得绝症的人变多了吗？</h2>
 								<p class="desc">最近同事们一起聊天，发现大家身边都有亲朋好友得了绝症。但在我们的印象里，绝症不是韩剧里才有的狗血桥段吗？得大病的人真的变多了，还是我们的错？</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249582&idx=1&sn=c70f0b10c7598f590c07c83988effac9#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_06.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">你的航意险有人承包啦！</h2>
-								<p class="desc">自己的小窝虽然温馨，偶尔也要拥抱更大的世界。小伙伴们坐飞机出门，是不是都买了</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407248896&idx=1&sn=550d7b25f2b6ddea487226ae99f91452#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_13.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">「 保险 」是怎样的一种存在？</h2>
-								<p class="desc">生活中总是提到保险，那么保险到底是怎样的一种存在，你真的了解保险吗？</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=405469087&idx=1&sn=a80102cbb41c7272903b4a02aa68565e#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_11.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">保险的意义</h2>
-								<p class="desc">汶川的地震、马航的失事、天津的大爆炸、癌症、车祸等等，每天，甚至每分钟都有人离去，曾经天真的认为风险离我们遥不可及，现在看看，它们真的离我们很远吗？</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=405080580&idx=1&sn=f140e0da3da02045104e41985d0ba885#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_14.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">“保险”真的保险吗？</h2>
-								<p class="desc">现阶段，随着国家对保险业的大力推动、人们风险意识的不断提高，保险已成为了我们茶余饭后的热门话题，但是我们对它还是有很多的担忧和疑虑。我们一起来探索吧......我们先来说说保险是什么？</p>
 							</div>
 						</a>
 						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249567&idx=1&sn=3b2f4a588e4791a126275f01bd40c1d7#rd">
@@ -208,7 +172,7 @@
 								<p class="desc">在互联网上买保险，很多人心里还有着疑问，我们该如何验证我们的投保是否有效呢？</p>
 							</div>
 						</a>
-  						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249623&idx=1&sn=bdbc416f7a8f2c7cafc9f9dea2c502b7#rd">
+  						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#rd">
 							<div class="cover">
 								<img class="img js_img" src="img/gl/small.jpg" alt=""/>
 							</div>
