--- a/app/anxiang_detail.html
+++ b/app/anxiang_detail.html
@@ -8,7 +8,18 @@
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>天寿助富您安享</title>
   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="anxiang/css/style.css?rev=250fa7ebe1def13cc13a684fd587e980"></head>
+  <link rel="stylesheet" href="anxiang/css/style.css?rev=250fa7ebe1def13cc13a684fd587e980">
+
+  <script>
+    (function(){
+       var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fanxiang_detail.html&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
+       var  openId = sessionStorage.getItem("openId");
+       if(!openId && location.href.indexOf("code")==-1){
+            window.location.href=WE_CHAT_URL;
+       }
+    })()
+  </script>
+  </head>
 <body  ng-controller="myAnXiangDetailCtrl" data-ng-init="init()">
 
 
