--- a/app/index.html
+++ b/app/index.html
@@ -34,11 +34,11 @@
       opacity: 1 !important;    /* */
     }
 </style>
- <link rel="stylesheet" href="css/output/application.min.css?rev=41f6cdb908451b017e6e45101b774201"> 
+ <link rel="stylesheet" href="css/output/application.min.css?rev=d8d90dce8d0d81f74425d2383083b7de"> 
 <!--
   <link rel="stylesheet" href="css/share.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/globe.css?rev=48d91061934f716a1b3cb8f8c448e345">
+  <link rel="stylesheet" href="css/globe.css?rev=b84d5817b6e7a1440aee2ee512de43b3">
   <link rel="stylesheet" href="css/app.css?rev=5a256568e36e1b53714d98abec1e1ac0">
   <link rel="stylesheet" href="css/angular-busy.min.css?rev=382a25599fb5b0b2e9efc9af00041c17">
  --> 
@@ -86,7 +86,7 @@
    
   <script src="js/util.js?rev=c014384e169dd1b34aeb2bd4a0deda99"></script>
   <script src="js/app.js?rev=69fb3ae7f3b2eead2ecaa3fda3e26e43"></script>
-  <script src="js/main_controllers.js?rev=fbb21922ef86a29a7c09fb41596d0f32"></script>
+  <script src="js/main_controllers.js?rev=703a63d61965981d20692ab0d854ccbd"></script>
   <script src="js/temai_controllers.js?rev=5f640fe36313f2846e96594a4cd9bdcb"></script>
   <script src="js/baodan_management_controller.js?rev=73d314f4e9a79db8923721e143ed2028"></script>
 
@@ -149,5 +149,6 @@
   }
  
   </script>
+  <img src="img/slider-btn.png" id="tip-img" style="opacity: 0;">
 </body>
 </html>
