simple auto commit

--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -150,5 +150,6 @@
       }
    })
   </script>
+  <link rel="stylesheet" href="wx_share/css/sports.css?rev=b5bf4c0ed0805b74125fa0284daee78b"><!--提前加载css，防止页面卡-->
 </body>
 </html>
