--- a/app/index.html
+++ b/app/index.html
@@ -84,15 +84,15 @@
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
    -->
   <script src="js/util.js?rev=c014384e169dd1b34aeb2bd4a0deda99"></script>
-  <script src="js/app.js?rev=c9e32a3f35163e1320c298defdcc7b62"></script>
-  <script src="js/main_controllers.js?rev=f2d2d3cc4ac5008b6db76f2230404717"></script>
-  <script src="js/temai_controllers.js?rev=efb894bf68af7e4c60f48700d13734a5"></script>
+  <script src="js/app.js?rev=3ad5c5449f76fdf1a7e10fb3439ae864"></script>
+  <script src="js/main_controllers.js?rev=ec47059beb3a650ea0d64d6b6687c193"></script>
+  <script src="js/temai_controllers.js?rev=6f9817dc7f111ac347b929cb8607a6c4"></script>
 
   <script src="js/baodan_management_controller.js?rev=73d314f4e9a79db8923721e143ed2028"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=3822bf6ba55601c3be5f2279a76589be"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
-  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
+  <script src="bower_components/angular-route-styles/route-styles.js"></script>
   
   <script type="text/javascript" >
    $("body").on("focus","input",function(){
