simple auto commit

--- a/app/anxiang_detail.html
+++ b/app/anxiang_detail.html
@@ -276,7 +276,7 @@ app.controller('myAnXiangDetailCtrl', ['$scope','$filter',
 
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="anxiang/js/share.js"></script>
+  <script src="anxiang/js/share.js?v=afafa"></script>
   <script>
     SHARE.init("http://web.youbaowuxian.com/anxiang_detail.html");
      var _hmt = _hmt || [];
