--- a/app/anxiang.html
+++ b/app/anxiang.html
@@ -30,7 +30,7 @@
   </div>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="anxiang/js/share.js"></script>
+  <script src="anxiang/js/share.js?v=afafa"></script>
   <script>
     SHARE.init("http://web.youbaowuxian.com/anxiang.html");
     var _hmt = _hmt || [];
