--- a/app/anxiang_index.html
+++ b/app/anxiang_index.html
@@ -23,7 +23,7 @@
   </a>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="anxiang/js/share.js"></script>
+  <script src="anxiang/js/share.js?v=afaf"></script>
   <script>
 
     SHARE.init("http://web.youbaowuxian.com/anxiang_index.html");
