--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
   <script src="js/util.js?rev=a17b5bdf82f58df014ea97ad64b20094"></script>
   <script src="js/app.js?rev=37e164e8778a7d47cb352c42292f7132"></script>
   <script src="js/main_controllers.js?rev=f30dec5dcf5e0e58062948196f1c25f7"></script>
-  <script src="js/temai_controllers.js?rev=ecede4802c301d7056d12823f4a9db68"></script>
+  <script src="js/temai_controllers.js?rev=d9485f5c0c19ccccca32968bf52d837f"></script>
   <script src="js/baodan_management_controller.js?rev=679a949da8ec357401716effec41dc1b"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=3822bf6ba55601c3be5f2279a76589be"></script>
@@ -147,6 +147,6 @@
   }
  
   </script>
-  <img src="img/slider-btn.png" id="tip-img" style="opacity: 0;">
+  <img src="img/slider-btn.png" id="tip-img" style="opacity: 0;position: absolute;left:-200px;bottom:-300px;">
 </body>
 </html>
