--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,8 @@
     }
 </style>
  <link rel="stylesheet" href="css/output/application.min.css?rev=22e7144ed2902c465334d8f4a7d3946e"> 
+ <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css?rev=377170fcb9a59057009bea5e1aa63aeb"> 
+ <link rel="stylesheet" type="text/css" href="bower_components/rangeslider.js/dist/rangeslider.css">
 <!--
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/globe.css?rev=92918cdffef145ead35047bee4c013e2">
@@ -80,16 +82,18 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
    -->
-  <script src="js/util.js?rev=a17b5bdf82f58df014ea97ad64b20094"></script>
-  <script src="js/app.js?rev=af2e38d68d64f8cede70d1702cba427a"></script>
-  <script src="js/main_controllers.js?rev=6231ab8c0a1625c2c766d8efcb70d69b"></script>
-  <script src="js/temai_controllers.js?rev=f5782e456c47121c58ec2e0b802ccdd0"></script>
-  <script src="js/baodan_management_controller.js?rev=b956e2308ac4a3a5349b9b3cd50a818e"></script>
+  <script src="js/util.js?rev=899d0880f631beb0c245dc5ca5296810"></script>
+  <script src="js/app.js?rev=4d43de195690649e33c50242ce06c897"></script>
+  <script src="js/main_controllers.js?rev=5aef5b0be4ef591239b0cd53cb2bf9ab"></script>
+  <script src="js/temai_controllers.js?rev=2928e75ddfdc78646eb65cfe8d4837f8"></script>
+  <script src="js/baodan_management_controller.js?rev=ac5df60398f067199a1f287ccac2f7db"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=1528aa5bcb7c6345a39322be792f0092"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
   <script src="bower_components/angular-route-styles/route-styles.js"></script>
   
+
+<script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
   <script type="text/javascript" >
    $("body").on("focus","input",function(){
          //$(this).parents(".cell_hd").siblings(".line").addClass("line_focus");
