simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -32,13 +32,13 @@
       opacity: 1 !important;    /* */
     }
 </style>
- <link rel="stylesheet" href="css/output/application.min.css?rev=22e7144ed2902c465334d8f4a7d3946e"> 
+ <link rel="stylesheet" href="css/output/application.min.css?rev=eab2e7cab18efd86fe07d64926c15b0b"> 
  <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css?rev=377170fcb9a59057009bea5e1aa63aeb"> 
  <link rel="stylesheet" type="text/css" href="bower_components/rangeslider.js/dist/rangeslider.css">
 <!--
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/globe.css?rev=92918cdffef145ead35047bee4c013e2">
-  <link rel="stylesheet" href="css/app.css?rev=ff7cfe8831a8d1321f663f5a9a640137">
+  <link rel="stylesheet" href="css/app.css?rev=f4d64e8879fe4984612909a6374d3d6a">
   <link rel="stylesheet" href="css/angular-busy.min.css?rev=382a25599fb5b0b2e9efc9af00041c17">
  --> 
    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
@@ -83,10 +83,10 @@
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
    -->
   <script src="js/util.js?rev=899d0880f631beb0c245dc5ca5296810"></script>
-  <script src="js/app.js?rev=3fe4565f0c9ccb35943eacb97082a737"></script>
-  <script src="js/main_controllers.js?rev=3f43cd6347ec1b50af96f22902ee45ff"></script>
+  <script src="js/app.js?rev=12992d65eb07bc025859859d48026489"></script>
+  <script src="js/main_controllers.js?rev=95c15a35141908c6d553db13833a4b40"></script>
   <script src="js/temai_controllers.js?rev=2928e75ddfdc78646eb65cfe8d4837f8"></script>
-  <script src="js/baodan_management_controller.js?rev=ac5df60398f067199a1f287ccac2f7db"></script>
+  <script src="js/baodan_management_controller.js?rev=3c3d7a9a8a2ba572457108f0c9553e55"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=1528aa5bcb7c6345a39322be792f0092"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
@@ -148,6 +148,6 @@
   }
  
   </script>
-  <img src="img/slider-btn.png" id="tip-img" style="opacity: 0;position: absolute;left:-200px;bottom:-300px;">
+  <img src="img/slider-btn.png" id="tip-img" style="opacity: 0;position: absolute;left:-200000px;">
 </body>
 </html>
