simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -89,10 +89,12 @@
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
    -->
   <script src="js/util.js?rev=899d0880f631beb0c245dc5ca5296810"></script>
-  <script src="js/app.js?rev=8d0d11ece47387cae6083b8b6d92af76"></script>
-  <script src="js/main_controllers.js?rev=56772058da8ab10ed705088f7e42ce82"></script>
+  <script src="js/app.js?rev=86cfd390eab3c373a63688dd79345a53"></script>
+  <script src="js/main_controllers.js?rev=e3341c1abe3951e74bd98ee4683001a3"></script>
   <script src="js/temai_controllers.js?rev=7cc1a085bd335da6ef040685a8a1d1f4"></script>
   <script src="js/baodan_management_controller.js?rev=ff7894f312b5e466641bb49dd1148138"></script>
+  <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
+  <script src="js/transaction_controllers.js?rev=1935aa1fb3483d72cd0c4474664a7d56"></script>
   <script src="js/directives.js?rev=57d74af2016e6c30d8b9b057ef03947a"></script>
   <script src="js/jquery.piemenu.js?rev=b68ce9fa2176f8780ac1740577fe0cdf"></script>
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
