simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
     }
 </style>
 
- <link rel="stylesheet" href="css/output/application.min.css?rev=92d0aee4510ae4636def755d06cd724d"> 
- <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+ <link rel="stylesheet" href="css/output/application.min.css?rev=39e196a1808209b2f8e20a9c9627e3d2"> 
+ <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   </head>
 <body ontouchstart="" onselectstart="return false">
 
@@ -71,7 +71,7 @@
 
 <!-- /wrapper -->
 
-  <script src="js/output/application.min.js?rev=d8db068ea299047012a5e2445c5e7f3f"></script>
+  <script src="js/output/application.min.js?rev=eaebdb761aa44258045622a746595d86"></script>
 
 
   <!--
@@ -85,10 +85,10 @@
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
   <script src="bower_components/angular-route-styles/route-styles.js"></script>
    <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
-   <script src="js/util.js?rev=899d0880f631beb0c245dc5ca5296810"></script>
-  <script src="js/app.js?rev=cc3ebaae56a06240e19040a9c2643fb9"></script>
-  <script src="js/main_controllers.js?rev=21f4197c97959e0b5f843a3a4661c727"></script>
-  <script src="js/temai_controllers.js?rev=cb61d8bb95ca9e36395b16d22cdee8d1"></script>
+   <script src="js/util.js?rev=716dd75074e4fde5102ce2ed7ce97882"></script>
+  <script src="js/app.js?rev=d6873e615d9d42a7e9d9ba54acde8455"></script>
+  <script src="js/main_controllers.js?rev=ae53f81128f644177e48f798613a7182"></script>
+  <script src="js/temai_controllers.js?rev=9a042f9525230de7943f765cdc6afbdb"></script>
   <script src="js/baodan_management_controller.js?rev=aef872e0d5b5380154703db93a19e266"></script>
   <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
   <script src="js/transaction_controllers.js?rev=7d2fb357837808a9affb2b083ab3a759"></script>
@@ -97,9 +97,6 @@
    -->
      <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
  
-
-  
-
 
   <script type="text/javascript" >
 
