--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -15,17 +15,29 @@
           results = regex.exec(location.search);
       return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
     }
+
+      /*
     function redirectWeChatUrl(){
       var qd = getParameterByName("qd") || "default";
        var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fwx_share.html%3fqd%3d"+qd+"&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
 
-      // var  openId = sessionStorage.getItem("openId");
        if(location.href.indexOf("code")==-1){
             window.location.href=WE_CHAT_URL;
        }
-       
     }
-    redirectWeChatUrl();
+    redirectWeChatUrl();*/
+
+    (function(){
+
+      var qd = getParameterByName("qd") || "default";
+       var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fwx_share.html%3fqd%3d"+qd+"&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
+
+      // var  openId = sessionStorage.getItem("openId");
+       if(location.href.indexOf("code") == -1){
+            window.location.href = WE_CHAT_URL;
+       }
+
+    })();
 
     var _hmt = _hmt || [];
     _hmt.push(['_setAutoPageview', false]);
