--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -16,7 +16,7 @@
       return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
     }
 
-      /*
+     
     function redirectWeChatUrl(){
       var qd = getParameterByName("qd") || "default";
        var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fwx_share.html%3fqd%3d"+qd+"&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
@@ -24,10 +24,10 @@
        if(location.href.indexOf("code")==-1){
             window.location.href=WE_CHAT_URL;
        }
-    }
-    redirectWeChatUrl();*/
+    } /**/
+    redirectWeChatUrl();
 
-   
+    /*
     (function(){
 
       var qd = getParameterByName("qd") || "default";
@@ -38,7 +38,7 @@
             window.location.href = WE_CHAT_URL;
        }
 
-    })();
+    })();*/
 
     var _hmt = _hmt || [];
     _hmt.push(['_setAutoPageview', false]);
@@ -57,7 +57,7 @@
 <body  ontouchstart="">
   <main class="content" ng-view></main>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="wx_share/js/output/wx_application.min.js?rev=0caca12ba48e2cf77435e075aa1b2e56"></script>
+  <script src="wx_share/js/output/wx_application.min.js?rev=7b807fd61db1359891b78b71543cc9fa"></script>
 <div class="mask" id="share">
   <div class="wx-tip"></div>
 </div>
