--- a/app/index.html
+++ b/app/index.html
@@ -72,8 +72,8 @@
 
 <!-- /wrapper -->
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=af33a738741ecc9328c1659114801dd5"></script>
-  
+  <script src="js/output/application.min.js?rev=ec720ab7ff1d99fc140c2f83a15968c3"></script>
+    <!-- <script src="js/temai_controllers.js?rev=d227edc118487114ff394e0b214185f6"></script> -->
   <!--
   <script src="wx_bx_gl/js/swiper.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -87,15 +87,15 @@
    <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
    <script src="js/util.js?rev=b2bf43d5f7ed31b026fc67b440509e9e"></script>
   <script src="js/app.js?rev=b2f1155cc7abefaed4bb348a5d7fffc6"></script>
-  <script src="js/main_controllers.js?rev=726324bd7b6e4f48a19cb74f098cd0e3"></script>
-  <script src="js/temai_controllers.js?rev=102966842b7b48b7c785ba7404df5eab"></script>
+  <script src="js/main_controllers.js?rev=269106f76f9ee0ad1e013b57bfa3e9c4"></script>
+
    <script src="js/util.js?rev=b2bf43d5f7ed31b026fc67b440509e9e"></script>
   <script src="js/app.js?rev=b2f1155cc7abefaed4bb348a5d7fffc6"></script>
-  <script src="js/main_controllers.js?rev=726324bd7b6e4f48a19cb74f098cd0e3"></script>
-  <script src="js/temai_controllers.js?rev=102966842b7b48b7c785ba7404df5eab"></script>
+  <script src="js/main_controllers.js?rev=269106f76f9ee0ad1e013b57bfa3e9c4"></script>
+
   <script src="js/baodan_management_controller.js?rev=aef872e0d5b5380154703db93a19e266"></script>
-  <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
-  <script src="js/transaction_controllers.js?rev=7d2fb357837808a9affb2b083ab3a759"></script>
+   <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
+  <script src="js/transaction_controllers.js?rev=2b706054a395cb0ae01fa3981fb8fc33"></script>
 
   <script src="js/jquery.piemenu.js?rev=b68ce9fa2176f8780ac1740577fe0cdf"></script>
    -->
