simple auto commit

--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -24,8 +24,8 @@
        if(!openId && location.href.indexOf("code")==-1){
             window.location.href=WE_CHAT_URL;
        }
-    } /**/
-    redirectWeChatUrl();
+    } 
+   // redirectWeChatUrl();
 
     /*
     (function(){
@@ -57,7 +57,7 @@
 <body  ontouchstart="">
   <main class="content" ng-view></main>
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="wx_share/js/output/wx_application.min.js?rev=ec5baf305e208f281486218105935846"></script>
+  <script src="wx_share/js/output/wx_application.min.js?rev=14bcebea02d24dc41bb99a1d4c4b9975"></script>
 <div class="mask" id="share">
   <div class="wx-tip"></div>
 </div>
