simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -67,12 +67,13 @@
   <div class="swiper-wrapper swrap_ctrl">
     <div class="swiper-slide slide" style="width: 260px;" ><img class="img1" onclick="goSports()" src="img/index_img/jixian_big.png" ></div>
     <div class="swiper-slide slide" style="width: 260px;" ><img class="img2" onclick="goIndexShare()" src="img/index_img/five_big.png" ></div>
+    <div class="swiper-slide slide" style="width: 260px;" ><img class="img2" onclick="goSpecial()" src="img/index_img/special.png" ></div>
   </div>
 </div>
 
 <!-- /wrapper -->
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=351a96e0858effbd87033d781d99f5a8"></script>
+  <script src="js/output/application.min.js?rev=e8be16fd7b28ada1a38871578287df61"></script>
   
   
   <!--
@@ -86,38 +87,38 @@
   <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
   <script src="bower_components/angular-route-styles/route-styles.js"></script>
   <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
-  <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+  <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-  <script src="js/temai_controllers.js?rev=4d04860e098d859f85ba21b632c475ad"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+  <script src="js/temai_controllers.js?rev=6c79d9b02dbf94a28cbb2eed25cfb294"></script>
   <script src="js/baodan_management_controller.js?rev=07719f25b62c78bb063c199e790f1950"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-  <script src="js/temai_controllers.js?rev=4d04860e098d859f85ba21b632c475ad"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+  <script src="js/temai_controllers.js?rev=6c79d9b02dbf94a28cbb2eed25cfb294"></script>
   <script src="js/baodan_management_controller.js?rev=07719f25b62c78bb063c199e790f1950"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-    <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+    <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
     <script src="js/baodan_management_controller.js?rev=07719f25b62c78bb063c199e790f1950"></script>
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
 
-   <script src="js/util.js?rev=2d4fc773f94414682499fec275838b88"></script>
+   <script src="js/util.js?rev=20ad819342963543dba6748a334e0fd5"></script>
   <script src="js/app.js?rev=13f5b65c4e0707333aac6053fd230b74"></script>
-  <script src="js/main_controllers.js?rev=50ed54ae30494ced4d1a16a70ba799e6"></script>
-  <script src="js/temai_controllers.js?rev=4d04860e098d859f85ba21b632c475ad"></script>
+  <script src="js/main_controllers.js?rev=7975bfa5c428ced9943b101b37a979bb"></script>
+  <script src="js/temai_controllers.js?rev=6c79d9b02dbf94a28cbb2eed25cfb294"></script>
   <script src="js/baodan_management_controller.js?rev=07719f25b62c78bb063c199e790f1950"></script>
    <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
   <script src="js/transaction_controllers.js?rev=e883055453bc9eaf9f87dad7e70a5d64"></script>
@@ -198,6 +199,10 @@
      function goIndexShare() {
       window.location = "/wx_share.html#/index";
     }
+    function goSpecial() {
+      window.location = "/wx_share.html#/special";
+    }
+
 </script>
   <img src="img/slider-btn.png?v=23423" id="tip-img" style="opacity: 0;position: absolute;left:-200000px;">
 </body>
