--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
 
 <!-- /wrapper -->
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=8dedb8c9fdc548c591f9cfb3f167e087"></script>
+  <script src="js/output/application.min.js?rev=903adab6e9d412c3c41486592b99ece2"></script>
   <!--
   <script src="wx_bx_gl/js/swiper.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -82,115 +82,27 @@
   <script src="bower_components/angular-route/angular-route.min.js"></script> 
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-  <script src="js/angular-busy.min.js?rev=5e39cee156fc10cdfb02e35cbf2da5aa"></script>
-<<<<<<< HEAD
-  <script src="bower_components/angular-route-styles/route-styles.js"></script>
-<<<<<<< HEAD
-  <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
-<<<<<<< HEAD
-  <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
+  <script src="js/angular-busy.min.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/main_controllers.js"></script>
+   <script src="js/util.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/main_controllers.js"></script>
+  <script src="js/temai_controllers.js"></script>
+  <script src="js/baodan_management_controller.js"></script>
+   <script src="js/util.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/main_controllers.js"></script>
+   <script src="js/util.js"></script>
   <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-    <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-    <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
+  <script src="js/main_controllers.js"></script>
+   <script src="js/util.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/main_controllers.js"></script>
+  <script src="js/temai_controllers.js"></script>
+  <script src="js/baodan_management_controller.js"></script>
 
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-=======
-  <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-    <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-    <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
->>>>>>> 4e16c716cc5b148135f6094498a3994b6d286844
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-=======
-   <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
-   
-<<<<<<< HEAD
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-=======
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
->>>>>>> 4e16c716cc5b148135f6094498a3994b6d286844
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
->>>>>>> dev
-=======
-  <script src="bower_components/angular-route-styles/route-styles.js"></script>>
-
-   <script src="bower_components/rangeslider.js/dist/rangeslider.min.js"></script>
-   
-<<<<<<< HEAD
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-=======
-   <script src="js/util.js?rev=28009d9eb91b9248fe068a79a370b6cc"></script>
-  <script src="js/app.js?rev=6edd47138b777096d300ed938d1625e6"></script>
-  <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
->>>>>>> 4e16c716cc5b148135f6094498a3994b6d286844
-  <script src="js/temai_controllers.js?rev=5347deb30de805782b3474c948f749ec"></script>
-  <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
->>>>>>> dev
-   <script src="js/service_controllers.js?rev=9cb4f1699258bd8c4e1b564785f6778e"></script>
-  <script src="js/transaction_controllers.js?rev=e883055453bc9eaf9f87dad7e70a5d64"></script>
-   <script src="js/main_controllers.js?rev=496e2f9a749a1b9850c2bb9671a24cf2"></script>
-     <script src="js/baodan_management_controller.js?rev=bd6da7612939685e88a0dbf521c26f43"></script>
-  <script src="js/jquery.piemenu.js?rev=b68ce9fa2176f8780ac1740577fe0cdf"></script>
    -->
      <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
  
