--- a/app/test.html
+++ b/app/test.html
@@ -10,14 +10,21 @@
 			body{
 				margin:30px;
 			}
+			#container{
+				height:300px;
+			}
 		</style>
 	</head>
 	<body>
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=f7U3YvyaQUlZedOjcS29MI4g"></script>
 		<div class="container-fluid">
 			<a  class="btn btn-primary btn-block" id="genOpenIdBtn">随机生成openId 并访问首页</a>
+			<a  class="btn btn-primary btn-block" id="newTbBtn">访问定制页新流程首页</a>
 
 			<a  class="btn btn-primary btn-block" id="getLocationBtn">获得您的地理位置</a>
+
+			<div id="container"></div> 
 		</div>
 		<script>
 
@@ -25,14 +32,33 @@
 			$(function(){
 					$("#genOpenIdBtn").click(function(){
 								sessionStorage.setItem("openId","test_"+Math.round(Math.random()*10000));
+								sessionStorage.setItem("isNew","false");
 								window.location.href="/";
+
+					});
+
+					$("#newTbBtn").click(function(){
+								sessionStorage.setItem("isNew","true");
+								window.location.href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3A%2F%2Fweb.youbaowuxian.com&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
 
 					});
 					function showPosition(position){
 							 alert("Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude);
-
+							var map = new BMap.Map("container");          // 创建地图实例  
+							var point = new BMap.Point(position.coords.longitude, position.coords.latitude);  // 创建点坐标  
+							var marker = new BMap.Marker(point);        // 创建标注    
+							map.addOverlay(marker)
+							map.centerAndZoom(point, 15);   
+							map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别  
 							 
 					}
+					(function(){
+						var map = new BMap.Map("container");          // 创建地图实例  
+						var point = new BMap.Point(116.404, 39.915);  // 创建点坐标  
+						var marker = new BMap.Marker(point);        // 创建标注    
+						map.addOverlay(marker)
+						map.centerAndZoom(point, 15);        
+					})();
 					$("#getLocationBtn").click(function(){
 						 if (navigator.geolocation){
 					   		 navigator.geolocation.getCurrentPosition(showPosition);
