simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,8 @@
 
 <!-- /wrapper -->
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=4acd37cca7ee0fb9c9dd47c2dd5effd5"></script>
+  <script src="js/output/application.min.js?rev=41c179a79f6283ab16c5bd015d266ba4"></script>
+    <script src="js/temai_controllers.js"></script>
   <!--
   <script src="wx_bx_gl/js/swiper.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
